--- a/exams.html
+++ b/exams.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'G-1XJENR2PLG');
-</script>   -->
+</script>   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Get latest Government Exams 2026 updates including notifications, admit cards, results, answer keys, exam dates and application forms for SSC, UPSC, Banking, Railway and State exams.">
