--- a/exams.html
+++ b/exams.html
@@ -633,7 +633,9 @@ Latest Government Exams 2026 Notifications, Admit Card & Results
             <iframe name="hidden_iframe" style="display:none;"></iframe>
           </div>
           <!--  Add new Pages Here -->
-
+<a href="https://freemocktestadda.in/upsc-civil-services-pre-application-deadline-extended.html" class="text-blue-600 hover:underline font-medium">
+UPSC
+</a>
 
 
 
