--- a/index.html
+++ b/index.html
@@ -660,7 +660,9 @@ isko
    class="text-blue-600 font-medium hover:underline block">
    SSC MTS Answer Key 2026
 </a>
-
+<a href="https://freemocktestadda.in/upsc-civil-services-pre-application-deadline-extended.html" class="text-blue-600 hover:underline font-medium">
+UPSC
+</a>
         <!-- Popular Exams -->
         <div>
           <h3 class="ui-text text-sm font-semibold uppercase tracking-wider mb-4">Popular Exams</h3>
