--- a/ssc-gd-slot-booking-2026.html
+++ b/ssc-gd-slot-booking-2026.html
@@ -547,6 +547,9 @@
   </a> 
   APO Recruitment 2026 update here.
 </p>
+<a href="https://freemocktestadda.in/upsc-civil-services-pre-application-deadline-extended.html" class="text-blue-600 hover:underline font-medium">
+UPSC
+</a>
         <!-- SSC GD Constable Banner -->
         <div class="rounded-lg overflow-hidden shadow-md">
           <div class="bg-gradient-to-r from-blue-900 to-blue-700 p-4 text-white">
