--- a/ts-inter-hall-ticket-2026.html
+++ b/ts-inter-hall-ticket-2026.html
@@ -788,7 +788,9 @@
             SSC MTS Admit Card 2026
           </a>
 
-
+<a href="https://freemocktestadda.in/upsc-civil-services-pre-application-deadline-extended.html" class="text-blue-600 hover:underline font-medium">
+UPSC
+</a>
           <!-- Recent Posts -->
           <div class="bg-white rounded-lg border border-border overflow-hidden shadow-sm">
             <div class="bg-primary text-white px-4 py-3 font-semibold text-xl">Recent Posts</div>
