--- a/upsc-civil-services-pre-application-deadline-extended.html
+++ b/upsc-civil-services-pre-application-deadline-extended.html
@@ -411,6 +411,111 @@ class="w-full max-w-8xl mx-auto my-10 rounded-xl shadow-md">
 
   </div>
 </section>
+          <section class="bg-gray-50 py-16">
+  <div class="max-w-8xl mx-auto px-6 lg:px-12">
+
+    <article class="bg-white rounded-2xl shadow-md p-8 lg:p-12">
+
+      <header class="mb-8">
+        <h1 class="text-3xl lg:text-5xl font-bold text-gray-900 leading-tight mb-4">
+          UPSC CSE Prelims 2026 Registration Deadline Extended Till 27 February, Apply at upsc.gov.in
+        </h1>
+        <p class="text-gray-500 text-base">
+          February 27, 2026 — <span class="text-blue-600 font-medium">MockTest Adda</span>
+        </p>
+      </header>
+
+      <div class="space-y-6 text-lg leading-relaxed text-gray-800">
+
+        <p>
+          The Union Public Service Commission (UPSC) has extended the online application deadline for the Civil Services Examination (CSE) 2026 and the Indian Forest Service (IFS) Examination 2026 by three days. As per the latest update, the registration window will now close on <strong>February 27, 2026 at 6 PM</strong>. Candidates can submit their application forms through the official websites — upsc.gov.in and upsconline.nic.in.
+        </p>
+
+        <div class="bg-gray-100 border border-gray-200 rounded-xl p-6">
+          <p class="font-semibold text-gray-900 mb-2">Official Notice:</p>
+          <p>
+            “The last date for submission of online Application form for the Civil Services Examination, 2026 and Indian Forest Service Examination, 2026 has now been extended by three (03) days i.e till 27-02-2026 (up to 6pm).”
+          </p>
+        </div>
+
+        <p>
+          The official notification for both examinations was released on February 4, 2026, and the application process commenced the same day. The Civil Services Examination 2026 aims to fill <strong>933 vacancies</strong> under various Central Government services. Recruitment for CSE and IFS will be conducted through a common Preliminary Examination.
+        </p>
+
+        <h2 class="text-2xl lg:text-3xl font-bold text-gray-900 mt-8">
+          UPSC CSE & IFS 2026 Exam Dates
+        </h2>
+
+        <ul class="list-disc pl-6 space-y-2">
+          <li><strong>Preliminary Examination:</strong> May 24, 2026</li>
+          <li><strong>Main Examination:</strong> August 21, 2026 onwards</li>
+        </ul>
+
+        <p>
+          Candidates who qualify in the Preliminary stage will be eligible to appear for the Main examination.
+        </p>
+
+        <h2 class="text-2xl lg:text-3xl font-bold text-gray-900 mt-8">
+          How to Apply for UPSC CSE & IFS 2026
+        </h2>
+
+        <ol class="list-decimal pl-6 space-y-2">
+          <li>Visit the official website at upsconline.nic.in.</li>
+          <li>Complete One-Time Registration (OTR) if not already registered.</li>
+          <li>Log in and select the CSE 2026 or IFS 2026 application link.</li>
+          <li>Fill in personal, academic, and contact details carefully.</li>
+          <li>Upload photograph, signature, and required documents.</li>
+          <li>Pay the application fee online (if applicable).</li>
+          <li>Review the form and submit it.</li>
+          <li>Download and save the confirmation page for future reference.</li>
+        </ol>
+
+        <h2 class="text-2xl lg:text-3xl font-bold text-gray-900 mt-8">
+          Application Fee Details
+        </h2>
+
+        <ul class="list-disc pl-6 space-y-2">
+          <li>General / OBC / EWS candidates: ₹100</li>
+          <li>SC / ST / Female candidates: ₹100</li>
+          <li>Persons with Benchmark Disabilities (PwBD): Exempted</li>
+        </ul>
+
+        <p>
+          The application fee must be paid online through the prescribed payment methods.
+        </p>
+
+        <h2 class="text-2xl lg:text-3xl font-bold text-gray-900 mt-8">
+          UPSC CSE 2026 Eligibility Criteria
+        </h2>
+
+        <ul class="list-disc pl-6 space-y-2">
+          <li>Candidate must hold a graduate degree from a recognised university.</li>
+          <li>Age limit: 21 to 32 years.</li>
+          <li>Age relaxation is applicable for reserved categories as per government rules.</li>
+        </ul>
+
+        <h2 class="text-2xl lg:text-3xl font-bold text-gray-900 mt-8">
+          UPSC CSE 2026 Selection Process
+        </h2>
+
+        <ul class="list-disc pl-6 space-y-2">
+          <li>Preliminary Examination</li>
+          <li>Main Examination</li>
+          <li>Interview / Personality Test</li>
+          <li>Document Verification</li>
+          <li>Medical Examination</li>
+        </ul>
+
+        <p>
+          UPSC will issue e-Admit Cards on the last working day of the week preceding the examination. Admit cards will be available only on the official website. Candidates who change their scribe seven days before the exam will receive their admit card three days prior to the examination date.
+        </p>
+
+      </div>
+
+    </article>
+
+  </div>
+</section>
 <section class="w-full bg-white py-10">
   <div class="max-w-8xl mx-auto px-4 sm:px-6 lg:px-8">
 
