--- a/exams.html
+++ b/exams.html
@@ -638,7 +638,9 @@ UPSC
 </a>
 
 
-
+<a href="https://freemocktestadda.in/upsssc-pet.html" class="text-burgundy font-medium hover:underline">
+UPSSSC PET Notification
+</a>
 
 
         </aside>
