--- a/index.html
+++ b/index.html
@@ -663,6 +663,9 @@ isko
 <a href="https://freemocktestadda.in/upsc-civil-services-pre-application-deadline-extended.html" class="text-blue-600 hover:underline font-medium">
 UPSC
 </a>
+<a href="https://freemocktestadda.in/upsssc-pet.html" class="text-burgundy font-medium hover:underline">
+UPSSSC PET Notification
+</a>
         <!-- Popular Exams -->
         <div>
           <h3 class="ui-text text-sm font-semibold uppercase tracking-wider mb-4">Popular Exams</h3>
