--- a/ssc-gd-slot-booking-2026.html
+++ b/ssc-gd-slot-booking-2026.html
@@ -550,6 +550,9 @@
 <a href="https://freemocktestadda.in/upsc-civil-services-pre-application-deadline-extended.html" class="text-blue-600 hover:underline font-medium">
 UPSC
 </a>
+<a href="https://freemocktestadda.in/upsssc-pet.html" class="text-burgundy font-medium hover:underline">
+UPSSSC PET Notification
+</a>
         <!-- SSC GD Constable Banner -->
         <div class="rounded-lg overflow-hidden shadow-md">
           <div class="bg-gradient-to-r from-blue-900 to-blue-700 p-4 text-white">
