--- a/ssc-mts-exam-analysis-2026-today.html
+++ b/ssc-mts-exam-analysis-2026-today.html
@@ -604,6 +604,9 @@ SSC MTS Admit Card 2026
   </a> 
   APO Recruitment 2026 update here.
 </p>
+<a href="https://freemocktestadda.in/upsssc-pet.html" class="text-burgundy font-medium hover:underline">
+UPSSSC PET Notification
+</a>
 <!-- SSC MTS 1st Shift Good Attempts Section -->
 <section class="w-full bg-gray-100 py-10">
   <div class="max-w-5xl mx-auto px-4 space-y-6 text-gray-800">
