--- a/exams.html
+++ b/exams.html
@@ -641,6 +641,9 @@ UPSC
 <a href="https://freemocktestadda.in/upsssc-pet.html" class="text-burgundy font-medium hover:underline">
 UPSSSC PET Notification
 </a>
+<a href="https://freemocktestadda.in/kseab-board-exam-update.html" class="text-burgundy font-medium hover:underline">
+KSEAB Board Exam 2026
+</a>
 
 
         </aside>
