--- a/rbi-assistant-notification-2026.html
+++ b/rbi-assistant-notification-2026.html
@@ -466,6 +466,9 @@
   </a> 
   APO Recruitment 2026 update here.
 </p>
+<a href="https://freemocktestadda.in/kseab-board-exam-update.html" class="text-burgundy font-medium hover:underline">
+KSEAB Board Exam 2026
+</a>
 <section class="w-full bg-white py-12">
   <div class="max-w-7xl mx-auto px-6 lg:px-10">
     <div class="max-w-5xl">
