--- a/ssc-gd-slot-booking-2026.html
+++ b/ssc-gd-slot-booking-2026.html
@@ -553,6 +553,9 @@ UPSC
 <a href="https://freemocktestadda.in/upsssc-pet.html" class="text-burgundy font-medium hover:underline">
 UPSSSC PET Notification
 </a>
+<a href="https://freemocktestadda.in/kseab-board-exam-update.html" class="text-burgundy font-medium hover:underline">
+KSEAB Board Exam 2026
+</a>
         <!-- SSC GD Constable Banner -->
         <div class="rounded-lg overflow-hidden shadow-md">
           <div class="bg-gradient-to-r from-blue-900 to-blue-700 p-4 text-white">
