--- a/index.html
+++ b/index.html
@@ -666,6 +666,9 @@ UPSC
 <a href="https://freemocktestadda.in/upsssc-pet.html" class="text-burgundy font-medium hover:underline">
 UPSSSC PET Notification
 </a>
+<a href="https://freemocktestadda.in/kseab-board-exam-update.html" class="text-burgundy font-medium hover:underline">
+KSEAB Board Exam 2026
+</a>
         <!-- Popular Exams -->
         <div>
           <h3 class="ui-text text-sm font-semibold uppercase tracking-wider mb-4">Popular Exams</h3>
