--- a/rrc-wr-apprentice-recruitment-2026.html
+++ b/rrc-wr-apprentice-recruitment-2026.html
@@ -1130,6 +1130,9 @@
 <a href="https://freemocktestadda.in/upsc-civil-services-pre-application-deadline-extended.html" class="text-blue-600 hover:underline font-medium">
 UPSC
 </a>
+<a href="https://freemocktestadda.in/kseab-board-exam-update.html" class="text-burgundy font-medium hover:underline">
+KSEAB Board Exam 2026
+</a>
           <!-- Important Dates -->
           <div class="bg-card-bg border border-gray-200 rounded p-4">
             <h3 class="text-lg font-semibold mb-4 pb-2 border-b border-gray-200">Important Dates</h3>
