--- a/ssc-mts-exam-analysis-2026-today.html
+++ b/ssc-mts-exam-analysis-2026-today.html
@@ -607,6 +607,9 @@ SSC MTS Admit Card 2026
 <a href="https://freemocktestadda.in/upsssc-pet.html" class="text-burgundy font-medium hover:underline">
 UPSSSC PET Notification
 </a>
+<a href="https://freemocktestadda.in/kseab-board-exam-update.html" class="text-burgundy font-medium hover:underline">
+KSEAB Board Exam 2026
+</a>
 <!-- SSC MTS 1st Shift Good Attempts Section -->
 <section class="w-full bg-gray-100 py-10">
   <div class="max-w-5xl mx-auto px-4 space-y-6 text-gray-800">
