--- a/exams.html
+++ b/exams.html
@@ -645,7 +645,9 @@ UPSSSC PET Notification
 KSEAB Board Exam 2026
 </a>
 
-
+<a href="https://freemocktestadda.in/ssc-chsl-result-out-now.html" class="text-burgundy hover:underline">
+SSC CHSL Result Direct Link
+</a>
         </aside>
       </div>
     </div>
