--- a/index.html
+++ b/index.html
@@ -669,6 +669,9 @@ UPSSSC PET Notification
 <a href="https://freemocktestadda.in/kseab-board-exam-update.html" class="text-burgundy font-medium hover:underline">
 KSEAB Board Exam 2026
 </a>
+<a href="https://freemocktestadda.in/ssc-chsl-result-out-now.html" class="text-burgundy hover:underline">
+SSC CHSL Result Direct Link
+</a>
         <!-- Popular Exams -->
         <div>
           <h3 class="ui-text text-sm font-semibold uppercase tracking-wider mb-4">Popular Exams</h3>
