--- a/kseab-board-exam-update.html
+++ b/kseab-board-exam-update.html
@@ -1134,7 +1134,9 @@ A video called 'Second PUC Exam Question for Wife' is also being shared widely. 
             <iframe name="hidden_iframe" style="display:none;"></iframe>
           </div>
           <!--  Add new Pages Here -->
-
+<a href="https://freemocktestadda.in/ssc-chsl-result-out-now.html" class="text-burgundy hover:underline">
+SSC CHSL Result Direct Link
+</a>
 
         </aside>
 
