--- a/rbi-assistant-notification-2026.html
+++ b/rbi-assistant-notification-2026.html
@@ -469,6 +469,9 @@
 <a href="https://freemocktestadda.in/kseab-board-exam-update.html" class="text-burgundy font-medium hover:underline">
 KSEAB Board Exam 2026
 </a>
+<a href="https://freemocktestadda.in/ssc-chsl-result-out-now.html" class="text-burgundy hover:underline">
+SSC CHSL Result Direct Link
+</a>
 <section class="w-full bg-white py-12">
   <div class="max-w-7xl mx-auto px-6 lg:px-10">
     <div class="max-w-5xl">
