--- a/rrb-group-d-2026-answer-key-live.html
+++ b/rrb-group-d-2026-answer-key-live.html
@@ -456,6 +456,9 @@
   </a> 
   APO Recruitment 2026 update here.
 </p>
+<a href="https://freemocktestadda.in/ssc-chsl-result-out-now.html" class="text-burgundy hover:underline">
+SSC CHSL Result Direct Link
+</a>
 <!-- ================= Railway Group D CBT 1 Answer Key 2026 ================= -->
 <section class="w-full bg-white py-12">
   <div class="max-w-8xl mx-auto px-6 lg:px-10">
