--- a/upsc-application-extended.html
+++ b/upsc-application-extended.html
@@ -1107,7 +1107,9 @@ class="w-full max-w-8xl mx-auto my-10 rounded-xl shadow-md">
             <iframe name="hidden_iframe" style="display:none;"></iframe>
           </div>
           <!--  Add new Pages Here -->
-
+<a href="https://freemocktestadda.in/ssc-chsl-result-out-now.html" class="text-burgundy hover:underline">
+SSC CHSL Result Direct Link
+</a>
 
         </aside>
 
